--- a/style.css
+++ b/style.css
@@ -46,12 +46,14 @@ body{
 	font-size: 20px;
     opacity: 0.8;
     text-align: center;
-    color: floralwhite;
+    background: gainsboro;
+	color: #404447;
+	padding: 5px;
 }
 .header__button{
 	border: 1px solid snow;
-    background: gainsboro;
-    opacity: 0.8;
+    background: white;
+    opacity: 0.9;
     box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
     cursor: pointer;
     box-sizing: border-box;
@@ -65,6 +67,11 @@ body{
 	color: #464c4f;
 	margin: 0;
 	padding: 10px;
+	font-weight: 400px;
+}
+.header__button a{
+	text-decoration: none;
+	outline: none;
 }
 .turs{
 	margin-bottom: 20px;
@@ -218,6 +225,9 @@ body{
 .review__text i{
 	display: inline-block;
 }
+.review hr{
+	padding-top: 10px;
+}
 .fas.fa-quote-left{
 	vertical-align: top;
 }
@@ -266,9 +276,7 @@ body{
 	font-weight: 600;
 	cursor: pointer;
 }
-.contact{
-	height: 300px;
-}
+
 .contact__item{
 	display: inline-block;
 	font-size: 26px;
@@ -276,3 +284,14 @@ body{
     cursor: pointer;
     color: #000;
 }
+.upper{
+	cursor: pointer;
+	position: fixed;
+	right: 20px;
+	bottom: 20px;
+	background: rgb(234, 236, 236) none repeat scroll 0% 0%;
+	border: 10px solid #e3f4de;
+	border-radius: 50%;
+	padding: 0 5px;
+}
+
